fix: resolve contrast error

--- a/ckanext/nhs/fanstatic/css/nhsuk.css
+++ b/ckanext/nhs/fanstatic/css/nhsuk.css
@@ -7318,3 +7318,7 @@ strong {
         top: 0
     }
 }
+
+.pagination>.disabled>span,.pagination>.disabled>span:hover,.pagination>.disabled>span:focus,.pagination>.disabled>a,.pagination>.disabled>a:hover,.pagination>.disabled>a:focus {
+    color: #206b82 !important;
+}
